# mitsuba

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  example.env  log4rs.yml  mitsuba.nginx  readme.md  sqlx-data.json
.github/: dependabot.yml
.github/workflows/: docker-image.yml  docker-publish.yml  rust.yml
.sqlx/: query-0180dcf0bcd20d1b4500e4b3d25304975ab187ca009db8944216507e15eaa300.json  query-0247327e65e5299612e5f78632b41ef83a0c668f23d2fca992a385b0fd61ea98.json  query-0552ea358fcde9f33a5818a63e154982e2b4c3e12c76c9f0b3722bef3dbe43d2.json  query-0808c0bf13c44213effa7c39a67101ac6f504897fe2a27f0dcbcdd1d923fd2f6.json  query-08e4693d7bc0740993fd9130a8323d55955d088a5da01f328e50d213a3b7cce2.json  query-0c4c11221434d0b8876b494428d09ea199858faf89ef76724d8325e47d10b033.json  query-0dbb33774a2c483df392be8e77c48e2d3b596d27b6753005246989d28eb0ddd9.json  query-1502c29f3f168470daa9cd67e110cd3e03ece1fa4f91961fe98d16629d38b295.json  query-1533d4513123fa112298e15460c0a1915fc29c9177c637b965ca900693534123.json  query-156f839e60adae80c4c526169f49e28085c68224860e2a9ddd1d9d5d70c94542.json  query-157ed773cf9f1ef36355f4d6390359a5b73a21d26fcb7bef8c885a27a2f2e272.json  query-168982d846be3629739c1917ab510fdf45b355ddb6cf132c16c3522ab4fcf411.json  query-1b089f10960a27edb42eab14cd7367b172a18124f86e943bef5ca734a3ce58db.json  query-1d84d3d4dc9a84cd071dc2c1ef3ae2e056044f357830d4e456ea1933a4d22b51.json  query-1f935defe33ecb3a8a5c0e71015f197e232106b42aaaa1afd9faaba6f2abe449.json  query-1fe9b654955d7cea070d5e45cef001b9cffd58e24282293bdb775c4ab8ab66d4.json  query-23e9ea2de1894f6a8032e41da1696b738fce10449ecf7b58d80bb04cfa0ddf5b.json  query-241cce91c27bf381a41cea6f48531491fb958f30ec77673e65407d81e3e3e4fc.json  query-2b32ab75b647e9d0b82e2041c7bb486cf373b6b90a013f6299d4500a395721e4.json  query-2dbbf003039d0b73c8a14695135cb70a28ee681063d2be74421eb582bf60cb49.json  query-2ded94b7b040ed3eedffb8bf6041394ca18a936f039c2b1b25606efd54b07c56.json  query-2fb5d66333c09db21f606913ab5932799d5a9707d05997677de5711b48dc3f80.json  query-33195ac3d8b469e3dc61b6e2174bba48f6fee60fa7efb6241b9d5d28bb2d20bf.json  query-34cc16dbb4e31e00edcad058d31fb95ed12ab664fd46eb44a554a0c846fea109.json  query-3b2f9c4f8638072bbc899d9986d8ba5073e921d9d7a758b2685097fd74ec3906.json  query-3ba0fb76537fbcb2f07d203fca97f0e6b592615fdd139f1b2fb9c44373c992d1.json  query-3d746555f3c057ee77c8c7fd064920678a65a1a0f34134d65305aa3f78e9b569.json  query-3e3f1c16dfa169c68af2b43f3195eb3bb22df453b01774e8672be2d7900cca2c.json  query-3fc32149e5ca00ff1112c947d7617d27c3917057784f5acfca541f1695fe7d82.json  query-43e1c029d0e5c07372dd7ff91dc03fc9bab44e6a60db08c544b6bf6a5b8f5ef2.json  query-459cfc6fe96380459bcd448cdbd8db7ddcb7b16d23f893c72b7ead22fd872fa0.json  query-47015876920b51f9b0b53a26bfb442b03679a7f65a52ac5d4395c911d2b48b7a.json  query-47a1d3ab1884c87701cfb6406fa49030bdef2465ab4f2c31eaec944d47e57a57.json  query-489af201fe5abd0da321cb8410c489ef1f1a5001cc051fa19bee2f684bef9e64.json  query-4a50970646f561d2fd175f68f117dafa1d0d533a9ae1b0ed8387ada03041f395.json  query-4a802450cf597ceffa321deb5b8315c4686d62cd1c8bb77b8527c4412fcb6af5.json  query-4b0ed88dd092c30dc1c4df982e2bbd7bb8113471b0ecccbb88e133a4e35031a1.json  query-4b31374695028763869010835a50fdb6f73075f705c95a5601e122396023fba3.json  query-4ce4ee6b06c52c6f175c6076ac4fc2f76a0b83c245039fa40cbd7d756ad41171.json  query-4db56e6b958d6d8e1c1ca7aecda10fc19c7a8ae0bdf19ef20c501b0970e61188.json  (+74 more)
docker/: Dockerfile  docker-compose.yml
migrations/: 20210328171845_create_posts.sql  20210328175623_create_boards.sql  20210328175711_create_image_backlog.sql  20210329214841_create_posts.sql  20210329215000_create_image_backlog.sql  20210329215030_create_thread_backlog.sql  20210411024736_create_post_history.sql  20240702082436_add_indices.sql  20240702102732_post_hiding.sql  20240702161636_file_blacklist.sql  20240703015011_full_text_search.sql  20240703225647_fix_update_search_index.sql  20240704045659_create_users.sql  20240707040232_create_files.sql  20240707082047_post_id_not_null.sql  20240707091345_file_index.sql  20240707145138_moderation_logs.sql  20240708022441_modlog_changes.sql  20240717110310_set_nullable.sql
migrations/2021-03-12-145615_create_posts/: up.sql
migrations/2021-03-13-131749_create_images/: down.sql  up.sql
migrations/2021-03-14-004332_create_boards/: down.sql  up.sql
migrations/2021-03-14-175716_create_resto_index/: down.sql  up.sql
migrations/2021-03-14-180457_create_image_indices/: down.sql  up.sql
migrations/2021-03-14-215206_create_image_backlog/: down.sql  up.sql
migrations/2021-03-22-144744_add_last_modified/: down.sql  up.sql
migrations/2021-03-22-161832_create_thread_table/: down.sql  up.sql
src/: api.rs  archiver.rs  board_archiver.rs  db.rs  db_sqlx.rs  file.sql  frontend.rs  http.rs  image_archiver.rs  main.rs  metric.rs  models.rs  object_storage.rs  schema.rs  thread_archiver.rs  util.rs
src/archiver/: archiver_metrics.rs  board_archiver.rs  image_archiver.rs  mod.rs  thread_archiver.rs
src/templates/: board_header.html  boards_list.html  expostdesktop.html  expostmobile.html  floating_form.html  floating_report_form.html  go_to_post.html  head.html  home.html  index_css.html  index_page.html  index_page_selector.html  login_form_css.html  login_page.html  mod_tools_form.html  op_post.html  post.html  post_file.html  post_info_desktop.html  post_info_mobile.html  post_moderation_settings.html  post_op_file.html  root.html  text_search_field.html  thread.html
src/web/: api.rs  auth.rs  frontend.rs  mod.rs
static/css/: burichannew.699.css  catalog_yotsuba_b_new.697.css  flags.689.css  futabanew.699.css  index.css  photon.699.css  tomorrow.699.css  yotsubanew.699.css  (+2 more)
(+2 files in other folders)
