[package]
name = "mitsuba"
version = "1.11.0"
authors = ["reasv", "cerda <cerdamods@protonmail.com>", "moot"]
edition = "2021"
license = "AGPL-3.0"
keywords = ["web", "archive", "download", "downloader", "crawler"]
repository = "https://github.com/reasv/mitsuba"
readme = "readme.md"
categories  = ["web-programming::http-server"]
description = "Lightweight 4chan board archive software (like Foolfuuka), in Rust"
exclude = [
    "data/*",
]

[dependencies]
log = "0.4"
env_logger = "0.9.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"],  default-features = false }
tokio = { version = "1", features = ["full"] }
#tokio-util = { version = "0.6.4", features = ["full"] }
dotenv = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nonzero_ext = "0.3.0"
anyhow = "1"
governor = "0.4.0"
bytes = "1"
backoff = { version = "0.4.0", features = ["tokio"] }
instant = "0.1.12"
regex = "1"
base64 = "0"
base32 = "0"
actix-web = { version = "4.0.0-beta.21", features = ["rustls"] }
actix-files = "0.6.0-beta.15"
clap = { version = "3", features = ["derive"] }
clap_derive = "3"
handlebars = { version = "4", features = ["dir_source"] }
unicode-truncate = "0"
handlebars_misc_helpers = {version = "0.12", features = ["string", "json"], default-features = false }
sqlx = { version = "0.5", features = [ "postgres", "macros", "migrate", "runtime-tokio-rustls", "offline" ] }
rust-embed = "5.9.0"
#mime_guess = "2.0.3"
new_mime_guess = "4.0.0"
sha2 = "0.10.1"
rust-s3 = { version = "0.28.0", features = ["tokio-rustls-tls"], default-features = false }
dashmap = "5.0.0"
weighted-rs = "0.1.3"
metrics = "0.17.1"
metrics-exporter-prometheus = "0.7.0"
futures = "0.3"
log4rs = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
