[package]
name = "mitsuba"
version = "1.12.0"
authors = ["reasv", "cerda", "moot"]
edition = "2021"
license = "AGPL-3.0"
keywords = ["web", "archive", "download", "downloader", "crawler"]
repository = "https://github.com/reasv/mitsuba"
readme = "readme.md"
categories  = ["web-programming::http-server"]
description = "Lightweight 4chan board archive software (like Foolfuuka), in Rust"
exclude = [
    "data/*",
]

[dependencies]
log = "0.4.22"
env_logger = "0.11.3"
reqwest = { version = "0.12.5", features = ["json", "rustls-tls", "http2"], default-features = false }
tokio = { version = "1.38.0", features = ["full"] }
actix-session = { version = "0.9.0", features = ["cookie-session"] }
#tokio-util = { version = "0.6.4", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
nonzero_ext = "0.3.0"
anyhow = "1.0.86"
governor = "0.6.3"
bytes = "1.6.0"
backoff = { version = "0.4.0", features = ["tokio"] }
instant = "0.1.13" # Unmaintained
regex = "1.10.5"
base64 = "0.22.1"
base32 = "0.5.0"
actix-web = { version = "4.8.0", features = ["rustls"] }
actix-files = "0.6.6"
clap = { version = "4.5.8", features = ["derive"] }
clap_derive = "4.5.8"
handlebars = { version = "5.1.2", features = ["dir_source"] }
unicode-truncate = "1.0.0"
handlebars_misc_helpers = { version = "0.16.3", features = ["string", "json"], default-features = false }
sqlx = {  version = "0.7.4", features = [ "postgres", "macros", "migrate", "runtime-tokio"] }
rust-embed = "8.4.0"
#mime_guess = "2.0.3"
new_mime_guess = "4.0.1"
sha2 = "0.10.8"
rust-s3 = { version = "0.33.0", features = ["tokio-rustls-tls"], default-features = false }
dashmap = "6.0.1"
weighted-rs = "0.1.3"
metrics = "0.18.1" # Not up to date
metrics-exporter-prometheus = "0.9.0" # Not up to date
futures = "0.3.30"
log4rs = "1.3.0"
argon2 = "0.5.3"
rand = "0.8.5"
percent-encoding = "2.3.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
